# ci-cd-template

./: .gitignore  README.md  command.txt  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
api-auth/: Cargo.toml  Dockerfile
api-auth/.sqlx/: query-168e205e3eb832b78d085b48281a1bae74d5a0e64c4c793c18a6400605bacf76.json  query-334cc07963a3449d264c7c2f23fb3dcc15719cd54a54e0d8454d80446acf1acd.json  query-49570e6a28fe055f406b39a00a198b24664e875c0fb6931bea5f95936616c81f.json
api-auth/migrations/: 0001_set.sql  0002_set.sql  sql.sql
api-auth/src/: auth_handler.rs  main.rs
api-chat/: Dockerfile  package-lock.json  package.json
api-chat/src/: auth.ts  index.ts  routes.ts  socketHandlers.ts
sql/init/: 00_user.sql  01_table.sql
