[package]
name = "api-auth"
version = "0.1.0"
edition = "2021" # 安定性を最優先し、実績のあるEdition 2021を推奨

[dependencies]
# --- Web Framework & Server ---
axum = "0.7"
axum-server = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# --- Database ---
sqlx = { version = "0.7", default-features = false, features = ["mysql", "runtime-tokio-rustls", "migrate", "macros", "chrono", "uuid", "time"] }

# --- Serialization & Data Handling ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Authentication & Cryptography ---
jsonwebtoken = "9.3"
sha2 = "0.10"

# --- HTTP Client & Utilities ---
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
headers = "0.4"
cookie = "0.18"

# --- Error Handling & Logging ---
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# --- General Utilities ---
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
url = "2.5"

lazy_static = "1.4"